<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context =".detailUser">


    <ImageView
        android:id="@+id/picdett"
        android:layout_width="206dp"
        android:layout_height="198dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/ya_begitulah1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/usernamedett"
        android:layout_width="197dp"
        android:layout_height="26dp"
        android:layout_marginTop="24dp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/picdett"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/nameDett"
        android:layout_width="333dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:text="@string/nameDett"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernamedett" />

    <TextView
        android:id="@+id/roleDett"
        android:layout_width="150dp"
        android:layout_height="31dp"
        android:layout_marginTop="8dp"
        android:text="@string/roleUser"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/descDett"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameDett"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/descDett"
        android:layout_width="276dp"
        android:layout_height="145dp"
        android:text="@string/descDett"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameDett"
        app:layout_constraintVertical_bias="0.207" />
</androidx.constraintlayout.widget.ConstraintLayout>