<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="-46dp">

        <ImageView
            android:id="@+id/photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/ya_begitulah"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/name"
            android:layout_width="259dp"
            android:layout_height="27dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@id/photo"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.3"
            card_view:layout_constraintStart_toEndOf="@+id/photo"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="0.153"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/roleUser"
            android:layout_width="251dp"
            android:layout_height="27dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:ellipsize="end"
            android:maxLines="5"
            android:textStyle="italic"
            android:textSize="16sp"
            android:textIsSelectable="false"
            card_view:layout_constraintBottom_toBottomOf="@+id/photo"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.16"
            card_view:layout_constraintStart_toEndOf="@+id/photo"
            card_view:layout_constraintTop_toBottomOf="@+id/name"
            card_view:layout_constraintVertical_bias="1.0"
            tools:text="@string/roleUser" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="254dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textStyle="italic"
            android:textSize="16sp"
            android:text="@string/username"
            card_view:layout_constraintBottom_toTopOf="@+id/roleUser"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.333"
            card_view:layout_constraintStart_toEndOf="@+id/photo"
            card_view:layout_constraintTop_toBottomOf="@+id/name"
            card_view:layout_constraintVertical_bias="0.312" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

